--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/joshualipps/apis/jsoup-1.15.1.jar" sourcepath="/Users/joshualipps/apis/jsoup/src"/>
+	<classpathentry kind="lib" path="libraries/jsoup-1.15.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
