--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,5 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=c7bc4f1 (pre-pull)
 eclipse.preferences.version=1
-<<<<<<< HEAD
 encoding//src/main/Main.java=UTF-8
-=======
->>>>>>> c7bc4f1 (pre-pull)
-encoding/<project>=UTF-8
