--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
       <artifactId>jsoup</artifactId>
       <version>1.13.1</version>
 	</dependency>
+	<dependency>
+		<groupId>HttpServer</groupId>
+		<artifactId>HttpServer</artifactId>
+		<version>0.1</version>
+	</dependency>
   </dependencies>
 </project>
